[package]
name = "rusty_cc"
version = "0.1.2"
edition = "2021"
authors = ["ankushlohiya"]
license = "MIT"
description = "library for handling i/o for competetive coding sites, some utility functions are also there"
repository = "https://github.com/ankushlohiya001/rusty_cc"
homepage = "https://github.com/ankushlohiya001/rusty_cc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
